# tuition-strategy

./: README.md  pyproject.toml  requirements.txt  vercel.json
docs/: README.md  calculator.js
pages/: README.md  index.html  styles.css
tuition_strategy/: __init__.py  app.py  calculator.py
tuition_strategy/static/css/: styles.css
tuition_strategy/static/js/: calculator.js
tuition_strategy/templates/: calculator.html
