[tool.poetry]
name = "tuition-strategy"
version = "0.1.0"
description = "Compare payment strategies between lump sum and installment payments"
authors = ["Naga Sanka <nsanka@me.com>"]
readme = "README.md"
packages = [{include = "tuition_strategy"}]

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.1"
jinja2 = "^3.1.6"
gunicorn = "^23.0.0"
python-dateutil = "^2.9.0.post0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.1.0"

[tool.poetry.scripts]
start = "tuition_strategy.app:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88

[tool.flake8]
max-line-length = 88
extend-ignore = ["E501", "W503"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
